--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#44AEC3</color>
     <color name="gri">#222</color>
+    <color name="grii">#585757</color>
 </resources>
