--- a/app/src/main/res/drawable/edittext_boder.xml
+++ b/app/src/main/res/drawable/edittext_boder.xml
@@ -5,8 +5,8 @@
 
     <!-- Çerçeve rengi ve kalınlığı -->
     <stroke
-        android:width="3dp"
-        android:color="@color/white" />
+        android:width="1dp"
+        android:color="@color/grii" />
 
     <!-- Köşelerin yuvarlaklığı -->
     <corners
